--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CHANGE_ME",
+  "name": "@atom/authorization",
   "scripts": {
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
@@ -71,13 +71,15 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@atom/shared": "1.3.0",
+    "atom-shared": "1.4.0",
+    "formik": "^2.2.9",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
-    "single-spa-react": "^4.2.0"
+    "single-spa-react": "^4.2.0",
+    "yup": "^0.32.10"
   }
 }
