Updated mfe name

--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -3,48 +3,52 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    
-    - uses: azure/docker-login@v1
-      with:
-        login-server: atomfrontcr.azurecr.io
-        username: ${{ secrets.acr_atomfrontcr_username }}
-        password: ${{ secrets.acr_atomfrontcr_password }}
-    
-    - name: Build and push image to ACR
-      id: build-image
-      run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t atomfrontcr.azurecr.io/atomaks:${{ github.sha }} --label dockerfile-path=Dockerfile
-        docker push atomfrontcr.azurecr.io/atomaks:${{ github.sha }}
-    
-    - uses: azure/k8s-set-context@v1
-      with:
-         kubeconfig: ${{ secrets.aks_atomaks_kubeConfig }}
-      id: login
-    
-    - name: Create namespace
-      run: |
-        namespacePresent=`kubectl get namespace | grep atom-auth-mfe | wc -l`
-        if [ $namespacePresent -eq 0 ]
-        then
-            echo `kubectl create namespace atom-auth-mfe`
-        fi
+      - uses: actions/checkout@master
 
-    - uses: azure/k8s-create-secret@v1
-      with:
-        namespace: atom-auth-mfe
-        container-registry-url: atomfrontcr.azurecr.io
-        container-registry-username: ${{ secrets.acr_atomfrontcr_username }}
-        container-registry-password: ${{ secrets.acr_atomfrontcr_password }}
-        secret-name: atomaksdockerauth
-       
-    - uses: azure/k8s-deploy@v1.2
-      with:
-        namespace: atom-auth-mfe
-        manifests: |
-          manifests/deployment.yml
-          manifests/service.yml
-        images: |
-          atomfrontcr.azurecr.io/atomaks:${{ github.sha }}
-        imagepullsecrets: |
-          atomaksdockerauth
+      - uses: azure/docker-login@v1
+        with:
+          login-server: atomfrontcr.azurecr.io
+          username: ${{ secrets.acr_atomfrontcr_username }}
+          password: ${{ secrets.acr_atomfrontcr_password }}
+
+      - name: Build and push image to ACR
+        id: build-image
+        run: |
+          docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t atomfrontcr.azurecr.io/atomaks:${{ github.sha }} --label dockerfile-path=Dockerfile
+          docker push atomfrontcr.azurecr.io/atomaks:${{ github.sha }}
+
+      - uses: azure/k8s-set-context@v1
+        with:
+          kubeconfig: ${{ secrets.aks_atomaks_kubeConfig }}
+        id: login
+
+      - name: Create namespace
+        run: |
+          namespacePresent=`kubectl get namespace | grep atom-auth-mfe | wc -l`
+          if [ $namespacePresent -eq 0 ]
+          then
+              echo `kubectl create namespace atom-auth-mfe`
+          fi
+
+      - uses: azure/k8s-create-secret@v1
+        with:
+          namespace: atom-auth-mfe
+          container-registry-url: atomfrontcr.azurecr.io
+          container-registry-username: ${{ secrets.acr_atomfrontcr_username }}
+          container-registry-password: ${{ secrets.acr_atomfrontcr_password }}
+          secret-name: atomaksdockerauth
+
+      - uses: azure/k8s-deploy@v1.2
+        with:
+          namespace: atom-auth-mfe
+          manifests: |
+            manifests/deployment.yml
+            manifests/service.yml
+          images: |
+            atomfrontcr.azurecr.io/atomaks:${{ github.sha }}
+          imagepullsecrets: |
+            atomaksdockerauth
+
+      - name: Update importmap
+        run: |
+          curl -d '{ "service":"@atom/authorization","url":"http://52.154.70.180:9000/atom-authorization.js?v=${{ github.sha }}" }' -X PATCH http://52.149.205.195:8000/services\?env=dev\&skip_url_check -H "Accept:application/json" -H "Content-Type:application/json"
