--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "single-spa-react": "^4.2.0",
     "yup": "^0.32.10"
   }
