--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@atom/authorization",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode=production",
     "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
@@ -18,6 +18,7 @@
     "pre-push": "yarn format"
   },
   "devDependencies": {
+    "@atom/design-system": "1.0.2",
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-proposal-decorators": "^7.15.8",
