--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@atom/authorization",
   "scripts": {
     "start": "webpack serve --mode=production",
+    "start:dev": "webpack serve --mode=development",
     "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
@@ -81,6 +82,7 @@
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "single-spa": "^5.9.3",
     "single-spa-react": "^4.2.0",
     "yup": "^0.32.10"
   }
