--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/prefer-interface": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "no-console": "error",
     "sort-keys": "off"
   }
