--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pre-push": "yarn format"
   },
   "devDependencies": {
-    "@atom/common": "1.1.1",
+    "@atom/common": "^1.4.1",
     "@atom/design-system": "1.0.2",
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
@@ -73,14 +73,13 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "formik": "^2.2.9",
     "immer": "^9.0.6",
     "inversify": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
     "single-spa": "^5.9.3",
