--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "pre-push": "yarn format"
   },
   "devDependencies": {
-    "@atom/common": "^1.4.1",
-    "@atom/design-system": "1.0.2",
+    "@atom/common": "^1.9.0",
+    "@atom/design-system": "^1.4.3",
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-proposal-decorators": "^7.15.8",
