--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "formik": "^2.2.9",
     "immer": "^9.0.6",
     "inversify": "^5.1.1",
+    "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
