--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "@atom/authorization",
+  "version": "1.2.1",
+  "main": "",
+  "types": "./dist/atom-authorization.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "webpack serve --mode=production",
     "start:dev": "webpack serve --mode=development",
     "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
+    "build-declarations": "tsc -p tsconfig.declarations.json && tscpaths -p tsconfig.declarations.json -s ./src -o ./dist",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js,ts,tsx",
     "format": "yarn pretty-quick",
@@ -19,7 +26,7 @@
     "pre-push": "yarn format"
   },
   "devDependencies": {
-    "@atom/common": "^1.9.0",
+    "@atom/common": "^2.1.4",
     "@atom/design-system": "^1.4.3",
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
@@ -62,6 +69,8 @@
     "sass-loader": "^12.1.0",
     "sass-resources-loader": "^2.2.3",
     "style-loader": "^3.2.1",
+    "tsconfig-paths": "^3.11.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
     "webpack-bundle-analyzer": "^4.5.0",
@@ -78,9 +87,11 @@
     "immer": "^9.0.6",
     "inversify": "^5.1.1",
     "oidc-client": "^1.11.5",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "5",
     "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
     "single-spa": "^5.9.3",
