--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "pre-push": "yarn format"
   },
   "devDependencies": {
-    "@atom/common": "^2.1.4",
+    "@atom/common": "^2.1.5",
     "@atom/design-system": "^1.4.3",
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
@@ -82,11 +82,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@automapper/classes": "^7.0.2",
+    "@automapper/core": "^7.0.2",
     "@reduxjs/toolkit": "^1.6.1",
     "formik": "^2.2.9",
     "inversify": "^5.1.1",
     "oidc-client": "^1.11.5",
-    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -104,6 +105,8 @@
     "react-router-dom",
     "reflect-metadata",
     "yup",
-    "react-redux"
+    "react-redux",
+    "@automapper/core",
+    "@automapper/classes"
   ]
 }
