--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atom/authorization",
-  "version": "1.2.3",
+  "version": "1.2.5",
   "main": "",
   "types": "./dist/atom-authorization.d.ts",
   "files": [
@@ -26,7 +26,7 @@
     "pre-push": "yarn format"
   },
   "devDependencies": {
-    "@atom/common": "^2.2.15",
+    "@atom/common": "^2.8.3",
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-proposal-decorators": "^7.15.8",
@@ -82,6 +82,7 @@
   },
   "dependencies": {
     "@atom/design-system": "^2.2.6",
+    "@atom/user-management": "^1.0.2",
     "@automapper/classes": "^7.0.2",
     "@automapper/core": "^7.0.2",
     "@reduxjs/toolkit": "^1.6.1",
